--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
     "jsdoc": "^3.6.11",
+    "prettier": "^2.7.1",
     "typescript": "4.8.4"
   }
 }
