--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
+    "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
   }
 }
