--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,56 @@
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "jsdoc"],
+  "rules": {
+    "jsdoc/require-description": 1,
+    "jsdoc/require-returns-description": 0,
+    "jsdoc/match-description": [
+      "error",
+      {
+        "mainDescription": {
+          "message": "Capitalize first word and add dot at the end of JSDoc block descriptions",
+          "match": "[A-Z].*\\."
+        },
+        "tags": {
+          "param": {
+            "message": "Capitalize first word of JSDoc block descriptions",
+            "match": "[A-Z].*"
+          }
+        }
+      }
+    ],
+    "jsdoc/no-undefined-types": [
+      1,
+      {
+        "definedTypes": ["jest"]
+      }
+    ],
+    "require-jsdoc": [
+      "error",
+      {
+        "require": {
+          "FunctionDeclaration": true,
+          "MethodDefinition": true,
+          "ClassDeclaration": false,
+          "ArrowFunctionExpression": true,
+          "FunctionExpression": true
+        }
+      }
+    ]
+  },
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:jsdoc/recommended"
+  ],
+  "settings": {
+    "jsdoc": {
+      "tagNamePreference": {
+        "returns": "return"
+      }
+    }
+  }
 }
