Add eslint rules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,17 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "jsdoc"],
   "rules": {
+    "default-param-last": ["warn"],
+    "no-console": ["error"],
+    "no-underscore-dangle": ["error"],
+    "sort-imports": [
+        "error",
+        {
+            "allowSeparatedGroups": true,
+            "ignoreCase": true
+        }
+    ], 
+    "sort-keys": ["error", "asc", { "natural": true }],
     "jsdoc/require-description": 1,
     "jsdoc/require-returns-description": 0,
     "jsdoc/match-description": [
