--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
+    "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
     "prettier": "^2.7.1",
