--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
     "prettier": "^2.7.1",
+    "sass": "^1.55.0",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
   }
