--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/react": "18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
-    "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
+    "eslint": "8.26.0",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
