--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "prepare": "husky install",
     "start": "next start",
-    "stylelint": "stylelint \"**/styles/**/*.scss\""
+    "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
+    "stylelint": "stylelint --fix \"**/styles/**/*.scss\""
   },
   "dependencies": {
     "next": "13.0.0",
@@ -33,6 +34,7 @@
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
+    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
