--- a/.github/workflows/check-mergeability.yml
+++ b/.github/workflows/check-mergeability.yml
@@ -30,7 +30,7 @@ jobs:
 
       - run: npm run build --if-present
 
-      - run: npm run stylelint
+      - run: npm run stylelint:check
 
       - run: npm run format:check
 
