--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,19 +1,26 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint", "jsdoc"],
+  "plugins": [
+    "@typescript-eslint",
+    "jsdoc"
+  ],
   "rules": {
-    "default-param-last": ["warn"],
-    "no-console": ["error"],
-    "no-underscore-dangle": ["error"],
-    "sort-imports": [
+    "default-param-last": [
+      "warn"
+    ],
+    "no-console": [
+      "error"
+    ],
+    "no-underscore-dangle": [
+      "error"
+    ],
+    "import/extensions": [
       "error",
       {
-        "allowSeparatedGroups": true,
-        "ignoreCase": true
+        "js": "ignorePackages"
       }
     ],
-    "sort-keys": ["error", "asc", { "natural": true }],
     "jsdoc/require-description": 1,
     "jsdoc/require-returns-description": 0,
     "jsdoc/match-description": [
@@ -34,7 +41,9 @@
     "jsdoc/no-undefined-types": [
       1,
       {
-        "definedTypes": ["jest"]
+        "definedTypes": [
+          "jest"
+        ]
       }
     ],
     "require-jsdoc": [
@@ -47,6 +56,20 @@
           "ArrowFunctionExpression": true,
           "FunctionExpression": true
         }
+      }
+    ],
+    "sort-imports": [
+      "error",
+      {
+        "allowSeparatedGroups": true,
+        "ignoreCase": true
+      }
+    ],
+    "sort-keys": [
+      "error",
+      "asc",
+      {
+        "natural": true
       }
     ]
   },
