--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "next dev",
     "format:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
     "format": "prettier --write \"pages/**/*.(ts|tsx)\"",
-    "lint": "next lint",
+    "lint:check": "next lint",
     "prepare": "husky install",
-    "start": "next start"
+    "start": "next start",
+    "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
+    "stylelint": "stylelint --fix \"**/styles/**/*.scss\""
   },
   "dependencies": {
     "next": "13.0.0",
@@ -19,21 +21,24 @@
   "devDependencies": {
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
-    "@types/react-dom": "18.0.8",
     "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
-    "eslint": "8.26.0",
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
+    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
+    "stylelint": "^14.14.1",
+    "stylelint-config-standard": "^29.0.0",
     "ts-jest": "^29.0.3",
     "typescript": "4.8.4"
   }
