--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "format:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
     "format": "prettier --write \"pages/**/*.(ts|tsx)\"",
     "lint:check": "next lint",
-    "prepare": "husky install",
     "start": "next start",
     "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
-    "stylelint": "stylelint --fix \"**/styles/**/*.scss\""
+    "stylelint": "stylelint --fix \"**/styles/**/*.scss\"",
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "jest — watch",
+    "test:coverage": "jest — coverage"
   },
   "dependencies": {
     "next": "13.0.0",
@@ -19,6 +22,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
@@ -28,6 +33,8 @@
     "axios": "^1.1.3",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
@@ -40,6 +47,7 @@
     "stylelint": "^14.14.1",
     "stylelint-config-standard": "^29.0.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
