--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "battleship-front",
   "version": "0.1.0",
   "author": "Kinder Corp.",
+  "engines": {
+    "node": "^18.12.1",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -32,12 +36,12 @@
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.7.0",
     "axios": "^1.1.3",
     "babel-jest": "^29.2.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
