--- a/.github/workflows/check-mergeability.yml
+++ b/.github/workflows/check-mergeability.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - run: npm ci
+      - run: npm ci --legacy-peer-deps
 
       - run: npm run build --if-present
 
@@ -35,3 +35,5 @@ jobs:
       - run: npm run format:check
 
       - run: npm run lint:check
+
+      - run: npm run test
