--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "battleship-front",
   "version": "0.1.0",
-  "private": true,
+  "author": "Kinder Corp.",
+  "engines": {
+    "node": "^18.12.1",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -11,7 +15,9 @@
     "prepare": "husky install",
     "start": "next start",
     "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
-    "stylelint": "stylelint --fix \"**/styles/**/*.scss\""
+    "stylelint": "stylelint --fix \"**/styles/**/*.scss\"",
+    "test:watch": "jest --coverage --watchAll",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "next": "13.0.0",
@@ -19,19 +25,28 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.7.0",
     "axios": "^1.1.3",
+    "babel-jest": "^29.2.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "enzyme": "^3.11.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
     "husky": "^8.0.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.2",
     "jsdoc": "^3.6.11",
     "postcss-scss": "^4.0.5",
@@ -39,7 +54,7 @@
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
     "stylelint-config-standard": "^29.0.0",
-    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
