🔧 Use type imports

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,9 +3,8 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "jsdoc"],
   "rules": {
+    "@typescript-eslint/consistent-type-imports": ["warn"],
     "default-param-last": ["warn"],
-    "no-console": ["error"],
-    "no-underscore-dangle": ["error"],
     "import/extensions": [
       "error",
       {
@@ -35,6 +34,8 @@
         "definedTypes": ["jest", "JSX"]
       }
     ],
+    "no-console": ["error"],
+    "no-underscore-dangle": ["error"],
     "require-jsdoc": [
       "error",
       {
