--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
+      "@core/*": ["./src/core/*"],
       "@home/*": ["./src/home/*"],
       "@pages/*": ["./pages/*"],
       "@shared/*": ["./src/shared/*"],
