--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "next": "13.0.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
