--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       "@core/*": ["./src/core/*"],
       "@home/*": ["./src/home/*"],
+      "@mocks/*": ["./mocks/*"],
       "@pages/*": ["./pages/*"],
       "@shared/*": ["./src/shared/*"],
       "@src/*": ["./src/*"],
