--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/enzyme": "^3.10.12",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.7.0",
@@ -46,16 +46,17 @@
     "babel-jest": "^29.2.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
-    "enzyme": "^3.11.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.0",
     "jsdoc": "^3.6.11",
     "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
+    "redux-mock-store": "^1.5.4",
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
     "stylelint-config-standard": "^29.0.0",
