--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.2"
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
@@ -38,10 +37,8 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "@types/redux-mock-store": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.7.0",
     "axios": "^1.1.3",
     "babel-jest": "^29.2.2",
     "clsx": "^1.2.1",
@@ -56,7 +53,6 @@
     "jsdoc": "^3.6.11",
     "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
-    "redux-mock-store": "^1.5.4",
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
     "stylelint-config-standard": "^29.0.0",
