--- a/package.json
+++ b/package.json
@@ -20,34 +20,37 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.0",
     "next": "13.0.0",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
-    "@types/enzyme": "^3.10.12",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.7.0",
     "axios": "^1.1.3",
     "babel-jest": "^29.2.2",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
-    "enzyme": "^3.11.0",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
     "eslint-plugin-jsdoc": "^39.3.25",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.3.0",
     "jsdoc": "^3.6.11",
     "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
