--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@core/*": ["./src/core/*"],
       "@helpers/*": ["./src/shared/_helpers/*"],
       "@home/*": ["./src/home/*"],
+      "@hooks/*": ["./src/shared/_hooks/*"],
       "@mocks/*": ["./mocks/*"],
       "@pages/*": ["./pages/*"],
       "@shared/*": ["./src/shared/*"],
