--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "noEmit": true,
     "paths": {
+      "@api/*": ["./src/api/*"],
       "@core/*": ["./src/core/*"],
       "@helpers/*": ["./src/shared/_helpers/*"],
       "@home/*": ["./src/home/*"],
