--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.3.0",
+    "jest-mock-axios": "^4.7.0-beta",
     "jsdoc": "^3.6.11",
     "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
