--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,3 @@
 {
-  "extends": "stylelint-config-standard",
-  "customSyntax": "postcss-scss"
+  "extends": ["stylelint-config-standard-scss", "stylelint-prettier/recommended"]
 }
