--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.3.0",
     "jsdoc": "^3.6.11",
-    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
-    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-prettier": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
