--- a/.github/workflows/check-mergeability.yml
+++ b/.github/workflows/check-mergeability.yml
@@ -30,10 +30,6 @@ jobs:
 
       - run: npm run build --if-present
 
-      - run: npm run stylelint:check
-
-      - run: npm run format:check
-
-      - run: npm run lint:check
+      - run: npm run check
 
       - run: npm run test
