--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "scripts": {
     "build": "next build",
+    "check": "npm run prettier:check & npm run stylelint:check & npm run lint:check",
     "dev": "next dev",
-    "format:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
-    "format": "prettier --write \"pages/**/*.(ts|tsx)\"",
+    "format": "npm run prettier & npm run stylelint",
     "lint:check": "next lint",
     "prepare": "husky install",
+    "prettier:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
+    "prettier": "prettier --write \"pages/**/*.(ts|tsx)\"",
     "start": "next start",
     "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
     "stylelint": "stylelint --fix \"**/styles/**/*.scss\"",
