--- a/.github/workflows/check-mergeability.yml
+++ b/.github/workflows/check-mergeability.yml
@@ -26,14 +26,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
 
-      - run: npm ci --legacy-peer-deps
+      - run: npm ci
 
       - run: npm run build --if-present
 
-      - run: npm run stylelint:check
-
-      - run: npm run format:check
-
-      - run: npm run lint:check
+      - run: npm run check
 
       - run: npm run test
