--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   },
   "scripts": {
     "build": "next build",
+    "check": "npm run prettier:check & npm run stylelint:check & npm run lint:check",
     "dev": "next dev",
-    "format:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
-    "format": "prettier --write \"pages/**/*.(ts|tsx)\"",
+    "format": "npm run prettier & npm run stylelint",
     "lint:check": "next lint",
     "prepare": "husky install",
+    "prettier:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
+    "prettier": "prettier --write \"pages/**/*.(ts|tsx)\"",
     "start": "next start",
     "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
     "stylelint": "stylelint --fix \"**/styles/**/*.scss\"",
@@ -34,7 +36,6 @@
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.2.0",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
@@ -53,11 +54,12 @@
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.3.0",
     "jsdoc": "^3.6.11",
-    "postcss-scss": "^4.0.5",
     "prettier": "^2.7.1",
     "sass": "^1.55.0",
     "stylelint": "^14.14.1",
-    "stylelint-config-standard": "^29.0.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-prettier": "^2.0.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
