--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["stylelint-config-standard-scss", "stylelint-prettier/recommended"]
+  "extends": ["stylelint-config-standard-scss", "stylelint-prettier/recommended"],
+  "rules": {
+    "at-rule-no-vendor-prefix": null,
+    "property-no-vendor-prefix": null
+  }
 }
