--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,9 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "jsdoc"],
   "rules": {
-    "@typescript-eslint/consistent-type-imports": ["warn"],
+    "@typescript-eslint/consistent-type-imports": ["error"],
     "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-unused-vars": ["error"],
     "default-param-last": ["warn"],
     "import/extensions": [
       "error",
