🚀 Add boat domain

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "noEmit": true,
     "paths": {
       "@api/*": ["./src/api/*"],
+      "@boat/*": ["./src/boat/*"],
       "@core/*": ["./src/core/*"],
       "@helpers/*": ["./src/shared/_helpers/*"],
       "@home/*": ["./src/home/*"],
