--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,7 @@
       }
     ],
     "jsdoc/no-undefined-types": [
-      1,
+      "error",
       {
         "definedTypes": ["jest", "JSX"]
       }
