Create page game (#27)
* 🔧 Add alias

* 🚀 Game page

* 🚀 Paths constants

* 🔥 Remove param gameId in the props

* 🔥 Rename files

* 🚧 WIP

* 🚀 Copy link

* 🚀 Redirection if game id is undefined

* 🔥 Remove main

* 🚧 WIP

* 🚚 Move in GameSettings

* 🚧 WIP

* 🚧 WIP

* 🩹 Fix update variables

* ✅ Fix tests

* 🚀 Socket emit/listen

* 🎨 Clean code

* 🚀 Socket events

* 🎨 Events in kebab-case

* 🚀 Fake userCard

* 🚧 WIP

* ✅ Update tests

* 🚧 WIP

* 🚧 WIP

* 🚨 Fix lint

* 🚨 Fix lint

* ✅ Hide test

* 🚀 Emit player joining only is current player is not admin

* 🚀 When game created set admin to the player

* 🎨 Clean code

* 🚀 Game helpers

* 🚀 Selector select player

* 🚀 Selector select player admin

* 🚧 WIP

* 🚨 Fix lint

* 🚧 WIP

* 🚀 Socket events

* 🚀 Game view

* 🚧 WIP

* 🚧 WIP

* 🚀 Close room

* 🩹 Fix bug

* 🚧 WIP

* 🚨 Fix lint

* 🚧 WIP

* 🚧 WIP

* 🔧 Fix config jsdoc eslint

* 🔥 Remove disabled button

* 🎨 Clean listeningEvents

* 💡 Comment code

* 🚧 WIP

* 🚧 WIP

* 🚧 WIP

* 🔥 Remove settings param

* 🚀 Weapon domain

* 🎨 Clean some code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,16 +13,20 @@
     "paths": {
       "@api/*": ["./src/api/*"],
       "@core/*": ["./src/core/*"],
+      "@game/*": ["./src/game/*"],
       "@helpers/*": ["./src/shared/_helpers/*"],
       "@home/*": ["./src/home/*"],
       "@hooks/*": ["./src/shared/_hooks/*"],
       "@mocks/*": ["./mocks/*"],
       "@pages/*": ["./pages/*"],
+      "@player/*": ["./src/player/*"],
       "@public/*": ["./public/*"],
       "@shared/*": ["./src/shared/*"],
+      "@socket/*": ["./src/socket/*"],
       "@src/*": ["./src/*"],
       "@styles/*": ["./styles/*"],
-      "@translation/*": ["./src/translation/*"]
+      "@translation/*": ["./src/translation/*"],
+      "@weapon/*": ["./src/weapon/*"]
     },
     "resolveJsonModule": true,
     "skipLibCheck": true,
