🔨 Prettier check all files

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "format": "npm run prettier & npm run stylelint",
     "lint:check": "next lint",
     "prepare": "husky install",
-    "prettier:check": "prettier --check \"pages/**/*.(ts|tsx)\"",
-    "prettier": "prettier --write \"pages/**/*.(ts|tsx)\"",
+    "prettier:check": "prettier --check \"(mocks|pages|src)/**/*.(ts|tsx)\"",
+    "prettier": "prettier --write \"(mocks|pages|src)/**/*.(ts|tsx)\"",
     "start:prod": "next start",
     "start": "next dev",
     "stylelint:check": "stylelint \"**/styles/**/*.scss\"",
